--- a/html/themes/custom/common_design_subtheme/components/gho-story/gho-story.css
+++ b/html/themes/custom/common_design_subtheme/components/gho-story/gho-story.css
@@ -26,10 +26,3 @@
   list-style: none;
   margin: 0;
 }
-
-.gho-story__local_tasks {
-  position: relative;
-  max-width: var(--content-width);
-  margin: 2rem auto;
-  z-index: 1;
-}
